# AI_Resume_Parser_update

./: README.md  main.py  pyproject.toml  requirements.txt
ai_resume_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/raw/: sample_resume2.docx
src/parser/: utils.py
