[build-system]
# Tells Python which tools are needed to build your project
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-parser"
version = "1.0.0"
description = "A professional AI-driven resume entity extractor and SQL storer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["AI", "Resume Parser", "OpenAI", "SQLite", "NLP"]

# Core dependencies (replaces requirements.txt)
dependencies = [
    "openai>=2.15.0",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
# Extra tools for you as a developer
dev = [
    "black",   # For code formatting
    "pytest",  # For running tests
    "ruff"     # For ultra-fast linting
]

[project.scripts]
# This creates a 'parse-cv' command you can run anywhere in your terminal
parse-cv = "main:main"

[tool.setuptools]
# Tells the build system where your code lives
packages = ["src"]